<resources>
    <string name="app_sui">com.higesea.xsda</string>
    <string name="app_name">小绳大爱</string>
    <string name="app_company">呵护你的每一天</string>
    <string name="splash_permiss_tip_title">以下权限通过</string>
    <string name="splash_permiss_tip_content">1.读写权限未通过\n2.电话状态未通过\n\n点击[去设置]可自行打开</string>
    <string name="splash_permiss_tip_cancel">稍候再说</string>
    <string name="splash_permiss_tip_ok">去设置</string>
    <string name="splash_no_pass_title">警告</string>
    <string name="splash_tip_no_pass_content">使用APP需要通过默认权限,否则将影响正常使用.为了让您拥有更优质的体验,请重启APP并点击同意,谢谢！</string>
    <string name="splash_no_pass_leave">好的,我知道了</string>
    <string name="neterror">T_T</string>
    <string name="neterror_retry">点击重试</string>
    <string name="exit">退出</string>
    <string name="check_net">正在检测网络…</string>
    <string name="loading_text">数据加载中…</string>
    <string name="loading_success">正在跳转…</string>
    <!--<string name="ping_address">"edvbrq20.api.lncld.net"</string>-->
    <string name="ping_address_backup">https://www.baidu.com/</string>
    <string name="check_update_title">检测到新版本</string>
    <string name="check_update_default_des">本次修复的bug:\n修复一些已知的bug</string>
    <string name="check_update_cancel">下次再说</string>
    <string name="check_update_ok">现在更新</string>
    <string name="sdcard_no_mounted">检测到您手机储存卡存在异常\n无法更新</string>
    <string name="sdcard_no_remained_space">剩余空间不足: %s</string>
    <string name="downloading">正在更新: %d%%</string>
    <string name="download_retry">重新下载</string>
    <string name="download_install">安装</string>
    <string name="download_neterror">貌似断网了T_T</string>
    <string name="download_apk_error">安装包异常\n请重新下载噢~</string>
    <string name="download_update_error">更新异常\n请退出重试哦~</string>
    <string name="guide_click">立即体验</string>
    <string name="login_bottom_text">立即登陆</string>
    <string name="login_input_hint_nickname">给自己取个昵称吧</string>
    <string name="login_input_hint_username">请输入您的手机号(仅限中国大陆)</string>
    <string name="login_input_hint_password">请输入您的密码</string>
    <string name="login_input_hint_confirmpassword">请确认您的密码(8~16位)</string>
    <string name="login_forgot">忘记密码</string>
    <string name="login_remember">自动登陆</string>
    <string name="logining">登陆中…</string>
    <string name="login_failed">登陆失败\n请稍候再试试噢~</string>
    <string name="login_user_not_exist">用户不存在\n请先注册吧</string>
    <string name="login_success">登陆成功</string>
    <string name="login_wechat_install">请先安装微信</string>
    <string name="login_wechat_authorized">检测权限中,请稍候…</string>
    <string name="login_wechat_cancel">操作取消</string>
    <string name="login_wechat_error">认证错误\n请重启APP</string>
    <string name="login_wechat_had_install_but_not_authorized">检测完成\n可微信登陆或者普通登陆</string>
    <string name="login_wechat_bindphone">绑定手机</string>
    <string name="login_wechat_bindphone_commit">点击提交</string>
    <string name="login_wechat_bindphone_phone_not_empty">手机号码不能为空</string>
    <string name="login_wechat_bindphone_password">请设置一个备用密码(8~16位)</string>
    <string name="login_wechat_authorized_unsupport">不支持授权\n请重试</string>
    <string name="login_wechat_authorized_err">授权错误\n请重试</string>
    <string name="login_wechat_authorized_network_error">网络错误\n请重试</string>
    <string name="login_wechat_authorized_cancel">授权取消</string>
    <string name="login_wechat_authorized_reject">授权被拒绝</string>
    <string name="login_wechat_authorized_no_effect">授权无效</string>
    <string name="login_wechat_authorized_openid_error">获取ID错误\n请重试</string>
    <string name="login_wechat_authorized_openid_wxactivity">正在拉取微信授权</string>
    <string name="login_wechat_authorized_bindphone_tip">请先绑定手机和备用密码</string>
    <string name="login_wechat_authorized_bindphone_openid_failed">微信登陆失败, 请联系客服\nQQ号: 173279578</string>
    <string name="register_input_hint_password">请输入您的密码(8~16位)</string>
    <string name="register_input_hint_verifycode">请输入验证码</string>
    <string name="register_text">注册</string>
    <string name="register_get_verifycode">获取验证码</string>
    <string name="register_commit">提交注册</string>
    <string name="register_username_tip">请输入正确的手机号</string>
    <string name="register_password_tip">请输入8~16位密码</string>
    <string name="register_confirmpassword_tip">请确认8~16位密码</string>
    <string name="register_passwordnotsame_tip">两次输入的密码不一致</string>
    <string name="register_begin2getverify_tip">发送成功</string>
    <string name="register_frequently_tip">发送验证码过于频繁\n请稍候再试</string>
    <string name="register_user_exist_tip">该号码已经注册过\n请直接登录</string>
    <string name="register_timeout">网络超时\n请稍候再试试</string>
    <string name="register_success">短信已发送\n请注意查收</string>
    <string name="register_time_error">你改过时间了 哼哼~</string>
    <string name="register_not_verify_empty">验证码不能为空</string>
    <string name="register_commit_verify_failed">无效的验证码\n请稍候重试</string>
    <string name="register_commit_verify_success">验证码校验成功</string>
    <string name="waitting_text">请稍候</string>
    <string name="forgot_input_hint_password">请输入您的新密码(8~16位)</string>
    <string name="forgot_input_hint_confirmpassword">请确认您的新密码(8~16位)</string>
    <string name="forgot_commit">确认重置</string>
    <string name="forgot_user_not_exist">用户不存在\n请先注册</string>
    <string name="forgot_user_reset_psd_success">密码重置成功</string>
    <string name="offline_title">注意啦!!!</string>
    <string name="offline_des">&#160;&#160;&#160;&#160;&#160;你的设备在别处登陆,如确认非本人操作,请立即切换到登陆界面重新登陆或者点击忘记密码选项以重新设定密码,谢谢!</string>
    <string name="offline_ok">立即登陆</string>
    <string name="base_login_error">帐号异常\n请重新登陆</string>
    <string name="base_other_login">帐号在其他设备登陆</string>
    <string name="base_network_login">网络异常\n请检查你的WIFI或者移动网络</string>
    <string name="main_bottomtab_pic">美图</string>
    <string name="main_bottomtab_video">社区</string>
    <string name="main_bottomtab_shop">商城</string>
    <string name="main_bottomtab_cart">购物车</string>
    <string name="main_bottomtab_my">我的</string>
    <string name="pic_search_hint">热门搜索: %s</string>
    <string name="pic_loading_text">加载中…</string>
    <string name="video_loading_text">加载中…</string>
    <string name="main_right_item_more">进入%s频道</string>

</resources>
