<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 背景 -->
    <ImageView
        android:id="@+id/iv_bg_no_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/colorGray" />

    <!-- 内容 -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_conner_8"
        app:layout_heightPercent="40%h"
        app:layout_widthPercent="80%w">

        <TextView
            android:id="@+id/tv_no_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/splash_no_pass_title"
            android:textColor="@color/colorCompanyDark"
            app:layout_marginTopPercent="5%h"
            app:layout_textSizePercent="8%h" />

        <TextView
            android:id="@+id/tv_no_pass_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_no_pass_title"
            android:layout_margin="15dp"
            android:text="@string/splash_tip_no_pass_content"
            android:textColor="@color/colorCompany"
            app:layout_textSizePercent="6.5%h" />

        <!-- OK & CANCEL -->
        <com.hiber.tools.layout.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_heightPercent="20%h">

            <TextView
                android:id="@+id/tv_no_pass_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/splash_no_pass_leave"
                android:textColor="@color/colorGray"
                app:layout_textSizePercent="30%h"
                app:layout_widthPercent="50%w" />

            <TextView
                android:id="@+id/tv_no_pass_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/tv_no_pass_cancel"
                android:gravity="center"
                android:text="@string/splash_no_pass_agree"
                android:textColor="@color/colorCompanyDark"
                app:layout_textSizePercent="30%h"
                app:layout_widthPercent="50%w" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorCompanyDark" />

        </com.hiber.tools.layout.PercentRelativeLayout>

    </com.hiber.tools.layout.PercentRelativeLayout>

</com.hiber.tools.layout.PercentRelativeLayout>
