<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <!-- banner -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_bindphone_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_heightPercent="9%h">

        <ImageView
            android:id="@+id/iv_bindphone_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_pink"
            app:layout_heightPercent="100%h"
            app:layout_paddingPercent="28%h"
            app:layout_widthPercent="100%h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_wechat_bindphone"
            android:textColor="@color/colorCompanyDark"
            app:layout_textSizePercent="30%h" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorCompany" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- phone number -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_bindPhone_phonenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_bindphone_banner"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="9%h"
        app:layout_marginTopPercent="5%h"
        app:layout_widthPercent="80%w">

        <ImageView
            android:id="@+id/iv_bindphone_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bindphone_logo"
            app:layout_heightPercent="100%h"
            app:layout_paddingPercent="28%h"
            app:layout_widthPercent="100%h" />

        <EditText
            android:id="@+id/et_bindphone_phonenum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/iv_bindphone_logo"
            android:background="@null"
            android:hint="@string/login_input_hint_username"
            android:inputType="number"
            android:maxLength="11"
            android:paddingStart="10dp"
            android:textColor="@color/colorCompanyDark"
            android:textColorHint="@color/colorCompany"
            app:layout_marginTopPercent="5%h"
            app:layout_textSizePercent="27%h" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorCompanyDark" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- password -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_bindphone_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_bindPhone_phonenum"
        android:layout_centerInParent="true"
        app:layout_heightPercent="9%h"
        app:layout_marginTopPercent="3%h"
        app:layout_widthPercent="80%w">

        <ImageView
            android:id="@+id/iv_bindphone_password_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/confirmpassword_logo"
            app:layout_heightPercent="100%h"
            app:layout_paddingPercent="28%h"
            app:layout_widthPercent="100%h" />

        <EditText
            android:id="@+id/et_bindphone_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/iv_bindphone_password_logo"
            android:background="@null"
            android:hint="@string/login_wechat_bindphone_password"
            android:inputType="text"
            android:maxLength="16"
            android:paddingStart="10dp"
            android:textColor="@color/colorCompanyDark"
            android:textColorHint="@color/colorCompany"
            app:layout_marginTopPercent="5%h"
            app:layout_textSizePercent="27%h" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorCompanyDark" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- verify code -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_bindphone_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_bindphone_password"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="9%h"
        app:layout_marginTopPercent="3%h"
        app:layout_widthPercent="80%w">

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="50%w">

            <ImageView
                android:id="@+id/iv_bindphone_verifylogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/verify_logo"
                app:layout_heightPercent="100%h"
                app:layout_paddingPercent="28%h"
                app:layout_widthPercent="100%h" />

            <EditText
                android:id="@+id/et_bindphone_verify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/iv_bindphone_verifylogo"
                android:background="@null"
                android:hint="@string/register_input_hint_verifycode"
                android:inputType="text"
                android:maxLength="6"
                android:textColor="@color/colorCompanyDark"
                android:textColorHint="@color/colorCompany"
                app:layout_textSizePercent="27%h" />

        </com.zhy.android.percent.support.PercentRelativeLayout>

        <!-- get verify button -->
        <TextView
            android:id="@+id/tv_bindphone_getVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_conner_colorpink_8"
            android:gravity="center"
            android:text="@string/register_get_verifycode"
            android:textColor="@color/colorWhite"
            app:layout_heightPercent="70%h"
            app:layout_textSizePercent="27%h"
            app:layout_widthPercent="40%w" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorCompanyDark"
            app:layout_widthPercent="50%w" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- commit -->
    <TextView
        android:id="@+id/tv_bindphone_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_bindphone_verify"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_login_click_selector"
        android:gravity="center"
        android:text="@string/login_wechat_bindphone_commit"
        android:textColor="@color/colorWhite"
        app:layout_heightPercent="8%h"
        app:layout_marginTopPercent="15%h"
        app:layout_textSizePercent="2.7%h"
        app:layout_widthPercent="80%w" />

    <!-- waiting -->
    <xsda.xsda.widget.WaitingWidget
        android:id="@+id/widget_waiting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</com.zhy.android.percent.support.PercentRelativeLayout>
